// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not set the textarea to resizable when viewed on browser with DocumentTouch 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should not set the textarea to resizable when viewed on browser with maxTouchPoints 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should not set the textarea to resizable when viewed on browser with msMaxTouchPoints 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should not set the textarea to resizable when viewed on browser with ontouchstart 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should render a TextArea when all the possible props are passed into it 1`] = `
<textarea
  aria-required="true"
  className="textarea"
  cols={15}
  disabled={false}
  name="description"
  onChange={[Function]}
  onFocus={[Function]}
  required={true}
  rows={5}
/>
`;

exports[`should render a default TextArea component 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should render a full size textbox appropriately 1`] = `
<textarea
  className="textarea full-size"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
/>
`;

exports[`should render a large textbox appropriately 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={10}
/>
`;

exports[`should render a medium textbox appropriately 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={5}
/>
`;

exports[`should render a small textbox appropriately 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should render as controlled when just a default value is passed into the Textarea 1`] = `
<Textarea
  disabled={false}
  isAutoResizable={false}
  isInvalid={false}
  name={null}
  onChange={[Function]}
  required={false}
  rows={null}
  size="small"
  value="foo"
>
  <textarea
    className="textarea"
    disabled={false}
    name={null}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    rows={2}
    value="foo"
  />
</Textarea>
`;

exports[`should render as uncontrolled when just a default value is passed into the Textarea 1`] = `
<Textarea
  defaultValue="foo"
  disabled={false}
  isAutoResizable={false}
  isInvalid={false}
  name={null}
  required={false}
  rows={null}
  size="small"
>
  <textarea
    className="textarea"
    defaultValue="foo"
    disabled={false}
    name={null}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    rows={2}
  />
</Textarea>
`;

exports[`should set the onChange and onFocus functions appropriately when the textarea is autoResizable 1`] = `
<textarea
  className="textarea resizable"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should set the rows attribute appropriate when it is passed into the textarea 1`] = `
<textarea
  className="textarea"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={7}
/>
`;

exports[`should set the textarea as auto resizable when isAutoResizable is passed into the component 1`] = `
<textarea
  className="textarea resizable"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should set the textarea to disabled when passed into the component 1`] = `
<textarea
  className="textarea"
  disabled={true}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should set the textarea to invalid when isInvalid is passed into the component 1`] = `
<textarea
  className="textarea form-error"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;

exports[`should set the textarea to resizable when viewed on a large device 1`] = `
<textarea
  className="textarea resizable"
  disabled={false}
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={2}
/>
`;
